--- a/src/main.scss
+++ b/src/main.scss
@@ -3,65 +3,61 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
+
+
 .content {
   .pages {
     height: calc(100vh - 56px);
     padding: 10px;
+    background-color: aliceblue
   }
 }
 
 .home {
+  background-color: aliceblue;
   .card {
-    background: linear-gradient(
-      0deg,
-      rgba(254, 0, 0, 1) 0%,
-      rgba(69, 28, 28, 1) 6%,
-      rgba(35, 42, 40, 1) 40%
-    );
     border-radius: 10px;
     position: relative;
     cursor: pointer;
     width: 200px;
-    height: 250px;
+    height: 220px;
     display: flex;
     padding: 0px;
     margin: auto;
     margin-top: 30px;
     border: none;
-    box-shadow: 5px 5px 13px 5px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 10px 51px -5px rgb(183 189 193 / 30%);
     transition: 0.5s all;
     &:hover {
       transform: translateY(-10px);
       box-shadow: 5px 16px 15px 5px rgba(0, 0, 0, 0.2);
     }
-    img {
-      border: 2px solid grey;
-      border-radius: 5px 5px 0 0;
-      filter: grayscale(100%);
+    .imgHolder{
+      margin: auto;
+      padding: 20px;
+      border-radius: 100%;
+      img{
+        margin:auto;
+      }
     }
     .name {
-      font-size: 1.3em;
+      padding-left: 20px;
+      font-size: 1.2em;
       text-transform: capitalize;
       font-weight: 500;
       padding-top: 8px;
       border-radius: 0px 0px 5px 5px;
-      text-align: center;
       width: 100%;
       height: 50px;
       background-color: white;
       text-overflow: "...";
       white-space: nowrap;
       overflow: hidden;
-    }
-    span {
-      position: absolute;
-      right: 10px;
-      top: 10px;
-      width: 12px;
-      height: 12px;
-      border-radius: 100px;
-      background-color: white;
-      border: 2px solid black;
+      .pokeID{
+        color: grey;
+        font-size: .8em;
+        margin-left: 10px;
+      }
     }
   }
   .paginator {
@@ -72,6 +68,7 @@
 }
 
 .detail {
+  position: relative;
   width: 100%;
   max-width: 600px;
   height: 100%;
@@ -79,6 +76,7 @@
   align-content: center;
   margin: auto;
   padding-top: 20px;
+  background-color: rgb(219, 217, 195);
   .name {
     margin-left:0px;
     font-weight: 700;
@@ -94,6 +92,7 @@
     color: grey;
     font-weight: 600;
   }
+  
 }
 
 .navbar {
@@ -102,5 +101,30 @@
     padding-left: 20px;
     text-decoration: none;
     padding-top: 2px;
+  }
+}
+
+.pokebola{
+  position: absolute;
+  right: 20px;
+  top: 10px;
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  background-color: red;
+  border-radius: 100%;
+  border: 2px solid black;
+  overflow: hidden;
+  cursor: pointer;
+  .bola{
+    box-shadow:0px 40px 0px 33px white,0px 40px 0px 35px #000000;
+    position: absolute;
+    right: 33%;
+    top: 33%;
+    width: 10px;
+    height: 10px;
+    background-color: white;
+    border-radius: 100%;
+    border: 2px solid black;
   }
 }
